# theZoo

./: 7z2600-linux-x64.tar.xz  README.md  setup.cfg  theZoo.py  theZoo_gui.py
IDA-NO-MCP/: INP.py  README.md  README_EN.md
conf/: maldb.db
imports/: globals.py
malware/Binaries/Ransomware.YggGuru/: Ransomware.YggGuru.md5  Ransomware.YggGuru.sha256
outputs/: all_native_index.csv  high_confidence_cpp.txt  likely_native_unknown.txt  removed_non_cpp_folders.txt
scripts/: clone_repos.sh  scan_native_cpp.py
