[metadata]
name = theZoo
version = 0.7.1
author = theZoo maintainers
license = GPL-3.0-or-later
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    urllib3
    pyminizip
    pyzipper

[options.entry_points]
console_scripts =
    theZoo = theZoo:main
    theZoo-gui = theZoo_gui:run
